Closed Bug 1855836 Opened 2 years ago Closed 2 years ago

WPT failure in intersection-observer/observer-attributes.html

Categories

(Core :: Layout, defect, P3)

defect

Tracking

()

RESOLVED FIXED
120 Branch
Tracking Status
firefox120 --- fixed

People

(Reporter: twisniewski, Assigned: emilio)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file)

We are failing one of the tests in https://wpt.fyi/results/intersection-observer/observer-attributes.html :

empty observer.thresholds
!ARRAY_EQ(a, b)

WebKit and Blink now pass all of these tests as of WebKit test preview 178.

Severity: -- → S3
Priority: -- → P3

Technically a broken test, but given other browsers' behavior and that
having no thresholds is useless, I don't think this edge-case is worth
fighting about.

See https://github.com/w3c/IntersectionObserver/pull/516 for the spec
change.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6335ff8c1275 Make empty threshold list behavior match other browsers. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: