Bug 1855836 - Make empty threshold list behavior match other browsers. r=smaug

Technically a broken test, but given other browsers' behavior and that
having no thresholds is useless, I don't think this edge-case is worth
fighting about.

See https://github.com/w3c/IntersectionObserver/pull/516 for the spec
change.

Differential Revision: https://phabricator.services.mozilla.com/D189764